Base/phpmyadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: phpmyadmin-deployment
  template:
    metadata:
      labels:
        app: phpmyadmin-deployment
    spec:
      containers:
        - name: phpmyadmin-deployment
          image: phpmyadmin
          ports:
            - containerPort: 80
              name: n8n
