Base/phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  selector:
    app: phpmyadmin-deployment
  ports:
    - port: 80
      targetPort: 80
